sumo/tests/sumo/extended/emitter/errors/xml/no_end/errors.sumo
Error: The input ended before all started tags were ended. Last tag started was 'triggeredsource'
 In file 'input_definition.def.xml'
 At line/column 18/1.

Quitting (on error).
